--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
       <title>Sunrise \& Sunset</title>
       <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-      <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+      <link rel="stylesheet" type="text/css" href="css/styles.css" />
    </head>
    <body>
       <div id="page">
