--- a/web/index.html
+++ b/web/index.html
@@ -10,8 +10,8 @@
       <div id="page">
          <form id="searchForm" method="post">
             <fieldset>
-               <input name="input_ort" id="s" type="text" /> <input type="button"
-                  value="Calc" id="submitButton" onClick="javascript:get_coordinates(s.value)" />
+               <input name="input_ort" id="s" type="text" /> 
+               <input type="button" value="Calc" id="submitButton" onClick="javascript:get_coordinates(s.value)" />
             </fieldset>
          </form>
          <div id="resultsDiv"></div>
